Fix top toolbar spacing and panel toggle

--- a/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
+++ b/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
@@ -28,9 +28,8 @@ h4 { font-size:1.1em; }
 }
 
 /* toolbar */
-
 body {
-	padding-top:30px;
+	/*padding-top:30px;*/
 }
 /*TODO: Remove when no longer needed. 
 .framed-navbar {
